tests/compile-fail/integration_suite__integration__general__pseudo_len_ndiv_4.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: number of bytes in blob not divisible by 4 (remainder: 3)
   ┌─ <input>:28:20
   │
28 │         wait(@blob="0f0000");
   │                    ^^^^^^^^ invalid blob literal


